--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@prisma/client": "^5.13.0",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-hover-card": "^1.0.7",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@uploadthing/react": "^6.5.1",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
